--- a/public/adm/styles/main.css
+++ b/public/adm/styles/main.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Document   : main
     Created on : Oct 1, 2012, 10:49:54 AM
     Author     : mariosmello
@@ -44,7 +44,7 @@ body {
 }
 .boxradios {
   -webkit-border-radius: 4px;
-  border-radius: 4px;    
+  border-radius: 4px;
 }
 
 .right {
@@ -162,7 +162,7 @@ body {
 #nav_side {
   border:1px solid #959BA2;
   -webkit-border-radius: 3px;
-  border-radius: 3px; 
+  border-radius: 3px;
 }
 
 #nav_side > a {
@@ -227,7 +227,7 @@ body {
 }
 
 #top_container {
-  margin-bottom:15px;
+  margin-bottom:10px;
   margin-top:0;
   width:98%;
 }
@@ -277,8 +277,13 @@ body {
 }
 
 .alert img {
-  float:left;
+  float:right;
   margin:0 5px 0 0;
+}
+
+.alert span p {
+  margin: 0;
+  padding: 0 0 0 15px;
 }
 
 .box {
