--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -127,7 +127,10 @@
           </ul>
           <ul class="nav navbar-nav navbar-right user-nav">
             <li class="dropdown profile_menu">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img alt="Avatar" src="/admin/images/avatar2.jpg" />Mário Mello <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <?php echo $data['user']['avatar_img'] ?>
+                <?php echo $data['user']['nome'] ?> <b class="caret"></b>
+              </a>
               <ul class="dropdown-menu">
                 <li><a href="/admin/config/cadastro/">Meus Dados</a></li>
                 <li class="divider"></li>
