Adaptação de Lista de Usuários

--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -206,7 +206,7 @@
               <a href="/admin/configuracao/cadastro/"><i class="fa fa-home"></i>Configurações</a>
             </li>
             <li>
-              <a href="/admin/configuracao/cadastro/"><i class="fa fa-male"></i>Usuário</a>
+              <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
             </li>
             <li>
               <a href="#"><i class="fa fa-smile-o"></i>UI Elements</a>
