Ajuste na imagem de preview para campos de upload

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3056,9 +3056,7 @@ button::-moz-focus-inner {
   display: none;
 }
 
-.preview a {
+.preview {
   clear: both;
-}
-.preview a img {
-  clear: both;
+  padding-top: 5px;
 }
