Montagem de páginas de exemplo

--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -179,30 +179,8 @@
     </div>
 
     <div id="cl-wrapper">
-      <div class="cl-sidebar">
-        <div class="cl-toggle"><i class="fa fa-bars"></i></div>
-        <div class="cl-navblock">
-          <ul class="cl-vnavigation">
-            <li>
-              <a href="/admin/configuracao/cadastro/"><i class="fa fa-home"></i>Configurações</a>
-            </li>
-            <li>
-              <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-smile-o"></i>UI Elements</a>
-              <ul class="sub-menu">
-                <li><a href="ui-elements.html">General</a></li>
-                <li><a href="ui-buttons.html">Buttons</a></li>
-                <li><a href="ui-icons.html">Icons</a></li>
-                <li><a href="ui-grid.html">Grid</a></li>
-                <li><a href="ui-tabs-accordions.html">Tabs & Acordions</a></li>
-                <li><a href="ui-nestable-lists.html">Nestable Lists</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
+
+      {$NAV}
 
       <div class="container-fluid" id="pcont">
 
