--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3060,3 +3060,31 @@ button::-moz-focus-inner {
   clear: both;
   padding-top: 5px;
 }
+
+.gallery {
+  overflow: hidden;
+  padding: 15px 0 10px 0;
+}
+
+.gallery li {
+  width: 200px;
+  float: left;
+  overflow: hidden;
+  margin: 0 7px 7px 0;
+}
+
+.gallery input {
+  width: 196px;
+  margin: 0;
+  font-size: 10px;
+}
+
+.galleryInfo {
+  color: #999999;
+  list-style: inside;
+  padding: 0 0 0 5px;
+}
+
+.galleryInfo li {
+  padding: 0 0 3px 0;
+}
