--- a/src/app/admin/views/exemplo_cadastro.phtml
+++ b/src/app/admin/views/exemplo_cadastro.phtml
@@ -229,6 +229,67 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label">CEP Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="CEP" class="form-control cepMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">CPF Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="CPF" class="form-control cpfMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">CNPJ Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="CNPJ" class="form-control cnpjMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Telefone Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="Telefone" class="form-control telefoneMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Data Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="Data" class="form-control dataMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Hora Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="Horário" class="form-control horaMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Hora Full Mask</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="Horário" class="form-control horafullMask">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Date Picker</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" placeholder="Data" class="form-control datepicker">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Color Basic</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" class="color_basic">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Color Full</label>
+            <div class="col-sm-10">
+              <input name="title_home" type="text" value="" class="color_full">
+            </div>
+          </div>
+
           {$SUBMIT}
 
         </form>
