--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -16,15 +16,18 @@
     <link rel="stylesheet" href="/admin/fonts/font-awesome-4/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/admin/js/jquery.select2/select2.css" />
     <link rel="stylesheet" type="text/css" href="/admin/js/plupload/js/jquery.plupload.queue/css/jquery.plupload.queue.css" />
+    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" />
+    <link href="/admin/js/spectrum/spectrum.css" rel="stylesheet" />
     <link href="/admin/css/style.css" rel="stylesheet" />
 
-
-    <script src="/admin/js/jquery.js"></script>
+    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script>
     <script type="text/javascript" src="/admin/js/plupload/js/plupload.full.js"></script>
     <script type="text/javascript" src="/admin/js/plupload/js/jquery.plupload.queue/jquery.plupload.queue.js"></script>
     <script type="text/javascript" src="/admin/js/ajaxform/jquery.form.js"></script>
-    <script src="/admin/js/jquery.ui/jquery-ui.js" type="text/javascript"></script>
     <script src="/admin/js/jquery.select2/select2.min.js" type="text/javascript"></script>
+    <script src="/admin/js/spectrum/spectrum.js" type="text/javascript"></script>
+    <script src="/admin/js/jquery.maskedinput/jquery.maskedinput.js" type="text/javascript"></script>
     <script type="text/javascript" src="/admin/js/scripts.js"></script>
 
     <!-- Bootstrap core JavaScript
