Inclusão de daterange picker na lista

--- a/src/app/admin/views/exemplo_lista.phtml
+++ b/src/app/admin/views/exemplo_lista.phtml
@@ -15,6 +15,9 @@
             <input class="form-control" name="email" type="text" placeholder="Busca por email" value="">
           </div>
           <div class="col-sm-4 col-md-4 col-lg-2">
+            <input class="form-control daterange" readonly name="datas" type="text" placeholder="Intervalo entre datas" value="">
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-2">
             <select class="form-control">
               <option>Selecione o cliente</option>
               <option>Mário</option>
