--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3009,3 +3009,173 @@ button::-moz-focus-inner {
 .galleryInfo li {
   padding: 0 0 3px 0;
 }
+
+.daterange {
+  cursor: default!important;
+  background: #FFFFFF!important;
+}
+
+.daterangepicker {
+  position: absolute;
+  background: white;
+  top: 100px;
+  left: 20px;
+  padding: 4px;
+  margin-top: 1px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px; }
+.daterangepicker.dropdown-menu {
+  max-width: none; }
+.daterangepicker.opensleft .ranges, .daterangepicker.opensleft .calendar {
+  float: left;
+  margin: 4px; }
+.daterangepicker.opensright .ranges, .daterangepicker.opensright .calendar {
+  float: right;
+  margin: 4px; }
+.daterangepicker .ranges {
+  width: 160px;
+  text-align: left; }
+.daterangepicker .ranges .range_inputs > div {
+  float: left;
+}
+.daterangepicker .ranges .range_inputs div {
+  width: 50%;
+}
+.daterangepicker .ranges .range_inputs div input {
+  width: 100%;
+}
+.daterangepicker .ranges .range_inputs > div:nth-child(2) {
+  padding-left: 11px; }
+.daterangepicker .calendar {
+  display: none;
+  max-width: 230px; }
+.daterangepicker .calendar th, .daterangepicker .calendar td {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  white-space: nowrap;
+  text-align: center; }
+.daterangepicker .ranges label {
+  color: #333333;
+  font-size: 11px;
+  margin-bottom: 2px;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0 white; }
+.daterangepicker .ranges input {
+  font-size: 11px;
+  cursor: not-allowed;
+  background-color: rgb(238, 238, 238);
+}
+.daterangepicker .ranges ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+.daterangepicker .ranges li {
+  font-size: 13px;
+  background: #f5f5f5;
+  border: 1px solid whitesmoke;
+  color: #08c;
+  padding: 3px 12px;
+  margin-bottom: 8px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  cursor: pointer; }
+.daterangepicker .ranges li.active, .daterangepicker .ranges li:hover {
+  background: #08c;
+  border: 1px solid #0088cc;
+  color: white; }
+.daterangepicker .calendar {
+  border: 1px solid #dddddd;
+  padding: 4px;
+  border-radius: 4px;
+  background: white; }
+.daterangepicker.opensleft:before {
+  position: absolute;
+  top: -7px;
+  right: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #cccccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: ''; }
+.daterangepicker.opensleft:after {
+  position: absolute;
+  top: -6px;
+  right: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid white;
+  border-left: 6px solid transparent;
+  content: ''; }
+.daterangepicker.opensright:before {
+  position: absolute;
+  top: -7px;
+  left: 9px;
+  display: inline-block;
+  border-right: 7px solid transparent;
+  border-bottom: 7px solid #cccccc;
+  border-left: 7px solid transparent;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
+  content: ''; }
+.daterangepicker.opensright:after {
+  position: absolute;
+  top: -6px;
+  left: 10px;
+  display: inline-block;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid white;
+  border-left: 6px solid transparent;
+  content: ''; }
+.daterangepicker table {
+  width: 100%;
+  margin: 0; }
+.daterangepicker td, .daterangepicker th {
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  white-space: nowrap; }
+.daterangepicker td.off, .daterangepicker td.disabled {
+  color: #919191; }
+.daterangepicker td.available:hover {
+  background: #ededed; }
+.daterangepicker th.available:hover {
+  background: #ededed; }
+.daterangepicker td.in-range {
+  background: #f2f2f2;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px; }
+.daterangepicker td.active {
+  color: white;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #2877aa;
+  /* Fallback Color */
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3693cf), to(#2877aa));
+  /* Saf4+, Chrome */
+  background-image: -webkit-linear-gradient(top, #3693cf, #2877aa);
+  /* Chrome 10+, Saf5.1+, iOS 5+ */
+  background-image: -moz-linear-gradient(top, #3693cf, #2877aa);
+  /* FF3.6 */
+  background-image: -ms-linear-gradient(top, #3693cf, #2877aa);
+  /* IE10 */
+  background-image: -o-linear-gradient(top, #3693cf, #2877aa);
+  /* Opera 11.10+ */
+  background-image: linear-gradient(top, #3693cf, #2877aa);
+  background-repeat: repeat-x;
+  border-color: #3693cf #3693cf #2877aa;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); }
+.daterangepicker td.active:hover {
+  color: white;
+  background-color: #2877aa;
+  *background-color: #2877aa; }
+.daterangepicker td.week {
+  font-size: 80%;
+  color: #cccccc; }
+.daterangepicker th.week {
+  font-size: 80%;
+  color: #cccccc; }
