--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -27,6 +27,8 @@
     <script type="text/javascript" src="/admin/js/ajaxform/jquery.form.js"></script>
     <script src="/admin/js/jquery.select2/select2.min.js" type="text/javascript"></script>
     <script src="/admin/js/spectrum/spectrum.js" type="text/javascript"></script>
+    <script src="/admin/js/daterangepicker/date.js" type="text/javascript"></script>
+    <script src="/admin/js/daterangepicker/daterangepicker.js" type="text/javascript"></script>
     <script src="/admin/js/jquery.maskedinput/jquery.maskedinput.js" type="text/javascript"></script>
     <script type="text/javascript" src="/admin/js/scripts.js"></script>
 
