--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -3044,6 +3044,8 @@ button::-moz-focus-inner {
 }
 .daterangepicker .ranges .range_inputs div input {
   width: 100%;
+  border: 0 solid;
+  margin-bottom: 10px;
 }
 .daterangepicker .ranges .range_inputs > div:nth-child(2) {
   padding-left: 11px; }
@@ -3179,3 +3181,7 @@ button::-moz-focus-inner {
 .daterangepicker th.week {
   font-size: 80%;
   color: #cccccc; }
+
+.form_busca input, .form_busca select {
+  margin-bottom: 8px!important;
+}
