--- a/src/app/admin/views/exemplo_lista.phtml
+++ b/src/app/admin/views/exemplo_lista.phtml
@@ -8,16 +8,17 @@
       <div class="content">
         <form method="get" class="form_busca">
           <input type="hidden" id="link_prefix" value="/admin/usuario/" />
-          <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="">
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="email" type="text" placeholder="Busca por email" value="">
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
+          <div class="col-sm-4 col-md-4 col-lg-3">
             <input class="form-control daterange" readonly name="datas" type="text" placeholder="Intervalo entre datas" value="">
           </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
+          <div class="col-sm-4 col-md-4 col-lg-3">
+            <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="">
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-3">
+            <input class="form-control" name="email" type="text" placeholder="Busca por email" value="">
+          </div>
+          <br class="clear" />
+          <div class="col-sm-4 col-md-4 col-lg-3">
             <select class="form-control">
               <option>Selecione o cliente</option>
               <option>Mário</option>
@@ -27,7 +28,7 @@
               <option>Outro teste</option>
             </select>
           </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
+          <div class="col-sm-4 col-md-4 col-lg-3">
             <select class="form-control">
               <option>Selecione o cliente com nome grande para testar</option>
               <option>Mário</option>
@@ -37,7 +38,7 @@
               <option>Outro teste</option>
             </select>
           </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
+          <div class="col-sm-4 col-md-4 col-lg-3">
             <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
             <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
           </div>
@@ -86,21 +87,6 @@
                   <a class="label label-info" href="#">
                     <i class="fa fa-envelope-o"></i>
                   </a>
-                  <a class="label label-danger" href="#">
-                    <i class="fa fa-trash-o"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-download"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-print"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-mail-forward"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-folder"></i>
-                  </a>
                 </td>
               </tr>
               <tr>
@@ -111,15 +97,6 @@
                 <td>343.609.248-79</td>
                 <td>06/01/2014</td>
                 <td class="text-center">
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <a class="label label-danger excluir_shortcut" href="#">
-                    <i class="fa fa-times"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-envelope-o"></i>
-                  </a>
                   <a class="label label-danger" href="#">
                     <i class="fa fa-trash-o"></i>
                   </a>
@@ -128,12 +105,6 @@
                   </a>
                   <a class="label label-info" href="#">
                     <i class="fa fa-print"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-mail-forward"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-folder"></i>
                   </a>
                 </td>
               </tr>
@@ -145,25 +116,7 @@
                 <td>343.609.248-79</td>
                 <td>19/12/2013</td>
                 <td class="text-center">
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <a class="label label-danger excluir_shortcut" href="#">
-                    <i class="fa fa-times"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-envelope-o"></i>
-                  </a>
-                  <a class="label label-danger" href="#">
-                    <i class="fa fa-trash-o"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-download"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-print"></i>
-                  </a>
-                  <a class="label label-default" href="#">
+                  <a class="label label-primary" href="#">
                     <i class="fa fa-mail-forward"></i>
                   </a>
                   <a class="label label-default" href="#">
@@ -190,52 +143,6 @@
                   </a>
                   <a class="label label-danger" href="#">
                     <i class="fa fa-trash-o"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-download"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-print"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-mail-forward"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-folder"></i>
-                  </a>
-                </td>
-              </tr>
-              <tr>
-                <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_usuario_382f21221497b5165a748e35e08ff833"></td>
-                <td><input class="setAtivo" type="checkbox" checked="checked" id="382f21221497b5165a748e35e08ff833"></td>
-                <td>Oi</td>
-                <td>mariana@studiofogo.com.br</td>
-                <td>343.609.248-79</td>
-                <td>04/01/2014</td>
-                <td class="text-center">
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-pencil"></i>
-                  </a>
-                  <a class="label label-danger excluir_shortcut" href="#">
-                    <i class="fa fa-times"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-envelope-o"></i>
-                  </a>
-                  <a class="label label-danger" href="#">
-                    <i class="fa fa-trash-o"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-download"></i>
-                  </a>
-                  <a class="label label-info" href="#">
-                    <i class="fa fa-print"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-mail-forward"></i>
-                  </a>
-                  <a class="label label-default" href="#">
-                    <i class="fa fa-folder"></i>
                   </a>
                 </td>
               </tr>
