--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -14,6 +14,9 @@
           <li><a href="/admin/exemplo/lista/">Lista Completa</a></li>
           <li><a href="/admin/exemplo/cadastro/">Cadastro Completo</a></li>
           <li><a href="/admin/exemplo/galeria/">Galeria</a></li>
+          <li><a href="/admin/exemplo/404/">Página 404</a></li>
+          <li><a href="/admin/exemplo/500/">Página 500</a></li>
+          <li><a href="/admin/exemplo/institucional/">Institucional</a></li>
         </ul>
       </li>
     </ul>
