--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -9,6 +9,9 @@
         <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
       </li>
       <li>
+        <a href="/admin/foto/lista/"><i class="fa fa-picture-o"></i>Fotos</a>
+      </li>
+      <li>
         <a href="#"><i class="fa fa-smile-o"></i>Exemplos</a>
         <ul class="sub-menu">
           <li><a href="/admin/exemplo/lista/">Lista Completa</a></li>
