--- a/src/app/admin/views/foto_cadastro.phtml
+++ b/src/app/admin/views/foto_cadastro.phtml
@@ -10,7 +10,6 @@
         {$ALERTS}
 
         <form id="main_form" class="form-horizontal group-border-dashed validate_form" method="post" style="border-radius: 0px;">
-
           {$SUBMIT}
 
           <div class="form-group">
@@ -30,7 +29,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
-              <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control">
+              <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control dataMask">
             </div>
           </div>
 
@@ -38,6 +37,7 @@
             <label class="col-sm-2 control-label">Galeria</label>
             <div class="col-sm-10">
               <?php echo @$data['table']['galeria_uploader'] ?>
+              <?php echo @$data['table']['galeria'] ?>
             </div>
           </div>
 
