Ajustes em ações de SUBMIT, voltando para a lista, ficando na mesma página ou apenas voltando.

--- a/src/app/admin/views/config_cadastro.phtml
+++ b/src/app/admin/views/config_cadastro.phtml
@@ -11,7 +11,7 @@
 
         <form id="main_form" class="form-horizontal group-border-dashed validate_form" method="post" style="border-radius: 0px;">
 
-          {$SUBMIT}
+          <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Nome</label>
@@ -41,7 +41,7 @@
             </div>
           </div>
 
-          {$SUBMIT}
+          <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
 
         </form>
       </div>
