--- a/src/app/admin/views/includes/submit.phtml
+++ b/src/app/admin/views/includes/submit.phtml
@@ -6,14 +6,14 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Salvar e voltar para lista</a></li>
-        <li><a href="#">Salvar e abrir novo com os mesmos dados</a></li>
+        <li><button type="submit" class="btn-link-submit submit_lista">Salvar e voltar para lista</button></li>
+        <li><button type="submit" class="btn-link-submit">Salvar e abrir novo com os mesmos dados</button></li>
         <li class="divider"></li>
-        <li><a href="#">Voltar para lista</a></li>
+        <li><a href="#" class="btn_lista">Voltar para lista</a></li>
       </ul>
     </div>
     <div class="col-sm-4 col-md-4 col-lg-2">
-      <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad">Voltar</a>
+      <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad btn_lista">Voltar</a>
     </div>
   </div>
 </div>
