--- a/src/app/admin/views/usuario_lista.phtml
+++ b/src/app/admin/views/usuario_lista.phtml
@@ -1,3 +1,5 @@
+<input type="hidden" id="link_prefix" value="/admin/usuario/" />
+
 <div class="row">
   <div class="col-md-12">
     <div class="block-flat">
@@ -7,7 +9,6 @@
 
       <div class="content">
         <form method="get" class="form_busca">
-          <input type="hidden" id="link_prefix" value="/admin/usuario/" />
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="<?php echo $data['busca']['nome']; ?>">
           </div>
@@ -21,7 +22,7 @@
 
       <div class="content">
         <div class="col-lg-12 pull-left">
-          <a href="/admin/usuario/cadastro/" title="Novo Registro" class="btn btn-primary btn-rad">Novo Registro</a>
+          <a href="#" title="Novo Registro" class="btn btn-primary btn-rad btn_cadastro">Novo Registro</a>
           <a href="#" title="Excluir Selecionados" class="lixeira_ex btn btn-danger btn-rad">Excluir Selecionados</a>
         </div>
         <br style="clear: both;" />
