Exibir box de cadastro realizado com sucesso

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -2977,6 +2977,10 @@ button::-moz-focus-inner {
   display: none;
 }
 
+.alert-success-fade {
+  display: block!important;
+}
+
 .preview {
   clear: both;
   padding-top: 5px;
