--- a/src/app/admin/views/includes/alerts.phtml
+++ b/src/app/admin/views/includes/alerts.phtml
@@ -1,5 +1,10 @@
 <div class="col-sm-12">
   <div class="content">
+    <?php if ( isset($data['registro_salvo']) ): ?>
+      <div class="alert alert-success alert-success-fade">
+        <i class="fa fa-check sign"></i><strong><?php echo $data['registro_salvo']; ?></strong>
+      </div>
+    <?php endif; ?>
     <div class="alert alert-success">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       <i class="fa fa-check sign"></i><strong>Sucesso!</strong>
