--- a/src/app/admin/views/foto_lista.phtml
+++ b/src/app/admin/views/foto_lista.phtml
@@ -7,12 +7,9 @@
 
       <div class="content">
         <form method="get" class="form_busca">
-          <input type="hidden" id="link_prefix" value="/admin/usuario/" />
+          <input type="hidden" id="link_prefix" value="/admin/foto/" />
           <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="nome" type="text" placeholder="Busca por nome" value="<?php echo $data['busca']['nome']; ?>">
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-2">
-            <input class="form-control" name="email" type="text" placeholder="Busca por email" value="<?php echo $data['busca']['email']; ?>">
+            <input class="form-control" name="titulo" type="text" placeholder="Busca por titulo" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
           <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
@@ -21,7 +18,7 @@
 
       <div class="content">
         <div class="col-lg-12 pull-left">
-          <a href="/admin/usuario/cadastro/" title="Novo Registro" class="btn btn-primary btn-rad">Novo Registro</a>
+          <a href="/admin/foto/cadastro/" title="Novo Registro" class="btn btn-primary btn-rad">Novo Registro</a>
           <a href="#" title="Excluir Selecionados" class="lixeira_ex btn btn-danger btn-rad">Excluir Selecionados</a>
         </div>
         <br style="clear: both;" />
