--- a/src/app/admin/views/usuario_lista.phtml
+++ b/src/app/admin/views/usuario_lista.phtml
@@ -20,13 +20,7 @@
         </form>
       </div>
 
-      <div class="content">
-        <div class="col-lg-12 pull-left">
-          <a href="#" title="Novo Registro" class="btn btn-primary btn-rad btn_cadastro">Novo Registro</a>
-          <a href="#" title="Excluir Selecionados" class="lixeira_ex btn btn-danger btn-rad">Excluir Selecionados</a>
-        </div>
-        <br style="clear: both;" />
-      </div>
+      {$BTN_LISTA_CAD-EXC}
 
       <div class="content">
         <div class="table-responsive">
@@ -62,30 +56,7 @@
             </tbody>
           </table>
 
-          <?php if ( !count($data['list']) ): ?>
-            <div class="header">
-              <h4>Sua precisa não encontrou resultados</h4>
-            </div>
-          <?php else: ?>
-            <div class="row">
-              <div class="col-sm-12">
-                <div class="pull-left">
-                  <div class="dataTables_info" id="datatable_info">
-                    Exibindo <?php echo $data['paginator']['subtotal']; ?> de <?php echo $data['paginator']['total']; ?> resultados
-                  </div>
-                </div>
-                <div class="pull-right">
-                  <div class="dataTables_paginate paging_bs_normal">
-                    <ul class="pagination">
-                      <?php echo $data['paginator']['numbers']; ?>
-                    </ul>
-                  </div>
-                </div>
-                <div class="clearfix">
-                </div>
-              </div>
-            </div>
-          <?php endif; ?>
+          {$PAGINACAO}
 
         </div>
       </div>
