--- a/src/app/admin/views/usuario_lista.phtml
+++ b/src/app/admin/views/usuario_lista.phtml
@@ -2,6 +2,9 @@
 
 <div class="row">
   <div class="col-md-12">
+
+    {$ALERT}
+
     <div class="block-flat">
       <div class="header">
         <h3>Lista de Usuários</h3>
