--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -6,6 +6,9 @@
         <a href="/admin/configuracao/cadastro/"><i class="fa fa-home"></i>Configurações</a>
       </li>
       <li>
+        <a href="/admin/lixeira/lista/"><i class="fa fa-trash-o"></i>Lixeira</a>
+      </li>
+      <li>
         <a href="/admin/usuario/lista/"><i class="fa fa-male"></i>Usuário</a>
       </li>
       <li>
