--- a/src/app/admin/views/lixeira_lista.phtml
+++ b/src/app/admin/views/lixeira_lista.phtml
@@ -15,6 +15,9 @@
           <div class="col-sm-4 col-md-4 col-lg-2">
             <input class="form-control" name="titulo" type="text" placeholder="Busca por título" value="<?php echo $data['busca']['titulo']; ?>">
           </div>
+          <div class="col-sm-4 col-md-4 col-lg-2">
+            <?php echo $data['secao']; ?>
+          </div>
           <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
           <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
         </form>
