Login usando ajax e mensagem de erro Inicio da separação dos JS

--- a/src/app/admin/views/layouts/login.phtml
+++ b/src/app/admin/views/layouts/login.phtml
@@ -11,18 +11,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:300,200,100' rel='stylesheet' type='text/css'>
 
-    <!-- Bootstrap core CSS -->
     <link href="/admin/js/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-
     <link rel="stylesheet" href="/admin/fonts/font-awesome-4/css/font-awesome.min.css">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for this template -->
     <link href="/admin/css/style.css" rel="stylesheet" />
 
   </head>
@@ -31,7 +21,10 @@
 
     {$CONTENT}
 
-    <script src="/admin/js/jquery.js"></script>
+    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="/admin/js/ajaxform/jquery.form.js"></script>
+    <script type="text/javascript" src="/admin/js/base.js"></script>
+    <script type="text/javascript" src="/admin/js/form.js"></script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
