--- a/src/app/admin/views/login.phtml
+++ b/src/app/admin/views/login.phtml
@@ -6,9 +6,16 @@
         <h3 class="text-center"><img class="logo-img" src="/admin/images/logo.png" alt="logo"/>DIN DIGITAL</h3>
       </div>
       <div>
-        <form style="margin-bottom: 0px !important;" class="form-horizontal" method="post" action="">
+        <form style="margin-bottom: 0px !important;" class="ajaxform form-horizontal" method="post" action="">
 
           <div class="content">
+
+            <div class="alert alert-danger">
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              <i class="fa fa-times-circle sign"></i>
+              <strong>Erro!</strong>
+              <div></div>
+            </div>
 
             <h4 class="title">Acessar painel de controle</h4>
             <div class="form-group">
@@ -31,6 +38,7 @@
           </div>
 
           <div class="foot">
+            <button class="btn btn-default" data-dismiss="modal" type="submit">Esqueci minha senha</button>
             <button class="btn btn-primary" data-dismiss="modal" type="submit">Acessar</button>
           </div>
 
