--- a/src/app/admin/views/includes/submit.phtml
+++ b/src/app/admin/views/includes/submit.phtml
@@ -12,8 +12,7 @@
         <li><a href="#" class="btn_lista">Voltar para lista</a></li>
       </ul>
     </div>
-    <div class="col-sm-4 col-md-4 col-lg-2">
-      <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad btn_lista">Voltar</a>
-    </div>
+    <a href="#" title="Voltar para a lista" class="btn btn-default btn-rad btn_lista btn_space">Voltar</a>
+    <a href="#" title="Novo registro" class="btn btn-default btn-rad btn_cadastro btn_space">Novo registro</a>
   </div>
 </div>
