--- a/src/app/admin/views/config_cadastro.phtml
+++ b/src/app/admin/views/config_cadastro.phtml
@@ -9,7 +9,7 @@
       </div>
       <div class="content">
 
-        <form id="main_form" class="form-horizontal group-border-dashed validate_form" method="post" style="border-radius: 0px;">
+        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;">
 
           <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
 
