--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -168,7 +168,7 @@
 
     <div id="loading_overlay">
       <div class="loading_message round_bottom">
-        <img src="/adm/images/loading.gif" alt="Carregando" />
+        <img src="/admin/images/loading.gif" alt="Carregando" />
       </div>
     </div>
 
