--- a/src/app/admin/views/usuario_cadastro.phtml
+++ b/src/app/admin/views/usuario_cadastro.phtml
@@ -11,7 +11,7 @@
       </div>
       <div class="content">
 
-        <form id="main_form" class="form-horizontal group-border-dashed validate_form" method="post" style="border-radius: 0px;">
+        <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;">
 
           <input type="hidden" name="redirect" value="cadastro" />
 
