--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -18,6 +18,9 @@
     <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script>
     <?php echo $data['assets']['js']['adm']; ?>
 
+    <script type="text/javascript" src="/admin/js/ckeditor365/ckeditor.js"></script>
+    <script type="text/javascript" src="/admin/js/ckfinder23/ckfinder.js"></script>
+
   </head>
 
   <body>
