Resolvendo bug do ckEditor

--- a/src/app/admin/views/layouts/layout.phtml
+++ b/src/app/admin/views/layouts/layout.phtml
@@ -19,6 +19,7 @@
     <?php echo $data['assets']['js']['adm']; ?>
 
     <script type="text/javascript" src="/admin/js/ckeditor365/ckeditor.js"></script>
+    <script type="text/javascript" src="/admin/js/ckeditor365/adapters/jquery.js"></script>
     <script type="text/javascript" src="/admin/js/ckfinder23/ckfinder.js"></script>
 
   </head>
