Unificação de link_prefix nas páginas de lista

--- a/src/app/admin/views/foto_lista.phtml
+++ b/src/app/admin/views/foto_lista.phtml
@@ -42,7 +42,7 @@
                   <td><?php echo $row['titulo']; ?></td>
                   <td></td>
                   <td class="text-center">
-                    <a class="label label-default" href="/admin/foto/cadastro/<?php echo $row['id_foto']; ?>/">
+                    <a class="label label-default btn_edicao" href="<?php echo $row['id_foto']; ?>/">
                       <i class="fa fa-pencil"></i>
                     </a>
                     <a class="label label-danger excluir_shortcut" href="#">
