--- a/src/app/admin/views/noticia_cadastro.phtml
+++ b/src/app/admin/views/noticia_cadastro.phtml
@@ -20,7 +20,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="ativo">Ativo</label>
             <div class="col-sm-10">
-              <input type="checkbox" name="ativo" id="ativo" <?php if ( @$data['table']['ativo'] == '1' ): ?>checked="checked"<?php endif; ?> />
+              <label class="checkbox-inline"><input type="checkbox" name="ativo" id="ativo" <?php if ( @$data['table']['ativo'] == '1' ): ?>checked="checked"<?php endif; ?> /></label>
             </div>
           </div>
 
