Cadastro  de categoria de noticia

--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -15,7 +15,15 @@
         <a href="/admin/foto/lista/"><i class="fa fa-picture-o"></i>Fotos</a>
       </li>
       <li>
-        <a href="/admin/noticia/lista/"><i class="fa fa-paperclip"></i>Notícias</a>
+        <a href="#"><i class="fa fa-paperclip"></i>Notícias</a>
+        <ul class="sub-menu">
+          <li>
+            <a href="/admin/noticia_cat/lista/"><i class="fa fa-paperclip"></i>Categoria</a>
+          </li>
+          <li>
+            <a href="/admin/noticia/lista/"><i class="fa fa-paperclip"></i>Notícias</a>
+          </li>
+        </ul>
       </li>
       <li>
         <a href="#"><i class="fa fa-smile-o"></i>Exemplos</a>
