--- a/src/app/admin/views/lixeira_lista.phtml
+++ b/src/app/admin/views/lixeira_lista.phtml
@@ -18,8 +18,8 @@
           <div class="col-sm-4 col-md-4 col-lg-2">
             <?php echo $data['secao']; ?>
           </div>
-          <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
           <input type="button" value="Limpar" class="limpar_busca btn btn-default btn-rad" />
+          <input type="submit" value="Buscar" class="btn btn-info btn-rad" />
         </form>
       </div>
 
@@ -45,7 +45,7 @@
             <tbody class="no-border-y">
               <?php foreach ( $data['list'] as $row ): ?>
                 <tr>
-                  <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $row['tbl']; ?>_<?php echo $row['id']; ?>" /></td>
+                  <td><input class="excluir" type="checkbox" name="excluir[]" id="exc_<?php echo $row['model']; ?>_<?php echo $row['id']; ?>" /></td>
                   <td><?php echo $data['DateFormat']::filter_date($row['del_data'], 'd/m/Y H:i:s'); ?></td>
                   <td><?php echo $row['titulo']; ?></td>
                   <td><?php echo $row['secao']; ?></td>
