--- a/src/app/admin/views/foto_cadastro.phtml
+++ b/src/app/admin/views/foto_cadastro.phtml
@@ -27,7 +27,16 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">Título</label>
             <div class="col-sm-10">
-              <input name="titulo" type="text" value="<?php echo @$data['table']['titulo']; ?>" placeholder="Título" class="form-control">
+              <input name="titulo" type="text" value="<?php echo @$data['table']['titulo']; ?>" placeholder="Título" class="limit_text form-control" maxlength="60">
+              <div class="limit_info"></div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Descrição</label>
+            <div class="col-sm-10">
+              <textarea name="descricao" class="form-control limit_text" rows="4" placeholder="Descrição da home" maxlength="150"></textarea>
+              <div class="limit_info"></div>
             </div>
           </div>
 
