Fix #4, loading nos formulários e fix #5, remover alguns botões do cadastro quando tela for pequena.

--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -2795,6 +2795,10 @@ button::-moz-focus-inner {
 
 @media (max-width: 767px) {
 
+  .btn_space {
+    display: none;
+  }
+
   #cl-wrapper{margin-top:0;}
   #pcont{
     margin-left: 0;
@@ -3207,4 +3211,14 @@ button::-moz-focus-inner {
 
 .charleft {
   display: none
+}
+
+.loadingsubmit {
+  display: block;
+  float: left;
+  width: 38px;
+  height: 30px;
+  background: url(/admin/images/loading_submit.gif) no-repeat;
+  margin: 0 20px 0 0;
+  visibility: hidden;
 }
