--- a/src/app/admin/views/configuracao_cadastro.phtml
+++ b/src/app/admin/views/configuracao_cadastro.phtml
@@ -11,7 +11,11 @@
 
         <form id="main_form" class="ajaxform form-horizontal group-border-dashed" method="post" style="border-radius: 0px;">
 
-          <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+
+          <div class="form-group form-group-submit">
+            <span class="loadingsubmit"></span>
+            <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+          </div>
 
           <div class="form-group">
             <label class="col-sm-2 control-label">Título Home</label>
@@ -69,7 +73,10 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+          <div class="form-group form-group-submit">
+            <span class="loadingsubmit"></span>
+            <button type="submit" class="btn btn-default" tabindex="-1">Salvar</button>
+          </div>
 
         </form>
       </div>
