--- a/src/app/admin/views/login.phtml
+++ b/src/app/admin/views/login.phtml
@@ -48,6 +48,7 @@
           </div>
 
           <div class="foot">
+            <span class="loadingsubmit"></span>
             <a class="btn_lostpass btn btn-default">Esqueci minha senha</a>
             <button class="btn btn-primary" data-dismiss="modal" type="submit">Acessar</button>
           </div>
