--- a/src/app/admin/views/recuperar_senha.phtml
+++ b/src/app/admin/views/recuperar_senha.phtml
@@ -35,6 +35,7 @@
           </div>
 
           <div class="foot">
+            <span class="loadingsubmit"></span>
             <button class="btn btn-primary" data-dismiss="modal" type="submit">Alterar senha</button>
           </div>
 
