Criação de Área de Vìdeos e implementação de identificar ID do YouTube e do Vimeo por JS

--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -15,6 +15,9 @@
         <a href="/admin/foto/lista/"><i class="fa fa-picture-o"></i>Fotos</a>
       </li>
       <li>
+        <a href="/admin/video/lista/"><i class="fa fa-video-camera"></i>Vídeos</a>
+      </li>
+      <li>
         <a href="#"><i class="fa fa-paperclip"></i>Notícias</a>
         <ul class="sub-menu">
           <li>
