--- a/src/app/admin/views/video_cadastro.phtml
+++ b/src/app/admin/views/video_cadastro.phtml
@@ -1,4 +1,4 @@
-<input type="hidden" id="link_prefix" value="/admin/foto/" />
+<input type="hidden" id="link_prefix" value="/admin/video/" />
 
 <div class="row">
   <div class="col-md-12">
@@ -7,7 +7,7 @@
 
     <div class="block-flat">
       <div class="header">
-        <h3>Cadastro de Fotos</h3>
+        <h3>Cadastro de Vídeo</h3>
       </div>
       <div class="content">
 
@@ -33,6 +33,14 @@
           </div>
 
           <div class="form-group">
+            <label class="col-sm-2 control-label">Descrição</label>
+            <div class="col-sm-10">
+              <textarea name="descricao" class="form-control limit_text" rows="4" placeholder="Descrição" maxlength="150"><?php echo @$data['table']['descricao']; ?></textarea>
+              <div class="limit_info"></div>
+            </div>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-2 control-label">Data</label>
             <div class="col-sm-10">
               <input name="data" type="text" value="<?php echo @$data['table']['data']; ?>" placeholder="Data" class="form-control dataMask">
@@ -40,10 +48,16 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label">Galeria</label>
+            <label class="col-sm-2 control-label">Link YouTube</label>
             <div class="col-sm-10">
-              <?php echo @$data['table']['galeria_uploader'] ?>
-              <?php echo @$data['table']['galeria'] ?>
+              <input name="link_youtube" type="text" value="<?php echo @$data['table']['link_youtube']; ?>" placeholder="Link do YouTube" class="youtube_link form-control">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Link Vimeo</label>
+            <div class="col-sm-10">
+              <input name="link_vimeo" type="text" value="<?php echo @$data['table']['link_vimeo']; ?>" placeholder="Link do Vimeo" class="vimeo_link form-control" >
             </div>
           </div>
 
