Inicio sistema de ordem

--- a/src/app/admin/views/layouts/layout_online.phtml
+++ b/src/app/admin/views/layouts/layout_online.phtml
@@ -8,12 +8,14 @@
     <link rel="shortcut icon" href="images/favicon.png">
 
     <title>DIN DIGITAL</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,200,100' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://dev.jairjunior.com.br/offline/jquery-ui.css" />
+    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/redmond/jquery-ui.css" />
     <?php echo $data['assets']['css']['adm']; ?>
 
-    <script src="http://dev.jairjunior.com.br/offline/jquery-1.9.1.js"></script>
-    <script src="http://dev.jairjunior.com.br/offline/jquery-ui.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js" type="text/javascript"></script>
     <?php echo $data['assets']['js']['adm']; ?>
 
     <script type="text/javascript" src="/admin/js/ckeditor365/ckeditor.js"></script>
