--- a/src/app/admin/views/noticiacat_cadastro.phtml
+++ b/src/app/admin/views/noticiacat_cadastro.phtml
@@ -31,6 +31,20 @@
             </div>
           </div>
 
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="home">Home</label>
+            <div class="col-sm-10">
+              <input type="checkbox" name="home" id="home" <?php if ( @$data['table']['home'] == '1' ): ?>checked="checked"<?php endif; ?> />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-sm-2 control-label">Capa</label>
+            <div class="col-sm-10">
+              <?php echo @$data['table']['capa']; ?>
+            </div>
+          </div>
+
           {$SUBMIT}
 
         </form>
