--- a/src/app/admin/views/includes/nav.phtml
+++ b/src/app/admin/views/includes/nav.phtml
@@ -3,7 +3,7 @@
   <div class="cl-navblock">
     <ul class="cl-vnavigation">
       <li>
-        <a href="/admin/log/list/"><i class="fa fa-bug"></i>Log</a>
+        <a href="/admin/log/lista/"><i class="fa fa-bug"></i>Log</a>
       </li>
       <li>
         <a href="/admin/configuracao/cadastro/"><i class="fa fa-certificate"></i>Configurações</a>
